feat: api 구조 확립
